added styles for the Headercomponents

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,5 +1,5 @@
 .header {
-    background: #13d6f9;
+    background: #185a66;
     height: 100px;
     border-bottom: solid;
     border-color: rgb(65, 87, 3);
