--- a/src/components/Main/style.css
+++ b/src/components/Main/style.css
@@ -1,2 +1,67 @@
 
  
+table {
+    border-top: solid;
+    border-bottom: solid;
+    border-color: grey;
+    border-width: 1px;
+    margin: auto;
+    margin-top: 30px; 
+      overflow-x: auto;
+    width: 80%;
+    text-align: center;
+}   
+
+ /* Table{
+    color: #2c0be7;
+   
+}  */
+  
+ 
+
+tr {
+    height: 100px;
+}
+
+thead tr {
+    height: 50px;
+    background-color: #8273d6;
+    color: white;
+}
+
+
+
+ .img {
+    padding: 10px;
+} 
+
+.name {
+    display: inline-block;
+}
+
+.name:hover {
+    cursor: pointer;
+}
+ 
+ img {
+    border-radius: 10px;
+    min-width: 100%;
+    max-width: 100%;
+}
+
+tr:nth-child(even) {
+    background-color: rgb(243, 243, 243);
+} 
+
+.downArrow {
+    width: 0;
+    height: 10;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 10px solid rgb(247, 243, 243);
+    margin-top: 50px;
+    position: relative;
+    top: 19px;
+    left: 5px;
+} 
+
