added styles and sort country

--- a/src/components/Main/style.css
+++ b/src/components/Main/style.css
@@ -29,17 +29,17 @@ thead tr {
     color: white;
 }
 
-
+tbody{
+    font-size: 15px;
+}
 
  .img {
     padding: 10px;
 } 
 
-.name {
-    display: inline-block;
-}
 
-.name:hover {
+
+.downArrow:hover {
     cursor: pointer;
 }
  
