--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -8,9 +8,10 @@
   
   .header h3 {
     margin: 0;
-    padding-top: 15px;
+    padding-top: 25px;
     text-align: center;
     color: white;
-    font-size: 3rem;
+    font-size: 30px;
+    
   }
   
