--- a/src/components/Main/style.css
+++ b/src/components/Main/style.css
@@ -26,11 +26,6 @@ tbody{
     font-size: 15px;
 }
 
- /* .img {
-    padding: 10px;
-}  */
-
-
 
 .downArrow:hover {
     cursor: pointer;
@@ -43,7 +38,7 @@ tbody{
 }
 
 tr:nth-child(even) {
-    background-color: rgb(243, 243, 243);
+    background-color: rgb(216, 213, 213);
 } 
 
 .downArrow {
@@ -56,5 +51,20 @@ tr:nth-child(even) {
     position: relative;
     top: 19px;
     left: 5px;
+} 
+
+
+.upArrow {
+    width: 0;
+    height: 10;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+     /* border-top: 10px solid rgb(247, 243, 243);  */
+    border-bottom: 10px solid rgb(247, 243, 243);
+    margin-top: 50px;
+    /* position: absolute; */
+    top: 19px;
+    /* left: 5px; */
+    
 } 
 
