--- a/src/components/SearchForm/style.css
+++ b/src/components/SearchForm/style.css
@@ -3,8 +3,10 @@ input{
     text-align: center;
     height: 30px;
     width: 20%;
-     padding:10px;
-     background-color: rgb(165, 234, 247); 
+    padding:10px;
+    background-color: rgb(165, 234, 247);
+    margin-left: 10px; 
+    
      
     }
  
