--- a/src/components/SearchForm/style.css
+++ b/src/components/SearchForm/style.css
@@ -4,8 +4,10 @@ input{
     height: 30px;
     width: 20%;
     padding:10px;
-    background-color: rgb(165, 234, 247);
+    background-color: rgb(213, 238, 247);
     margin-left: 10px; 
+    border: 1px solid rgb(49, 49, 51);
+    box-sizing: border-box;
     
      
     }
