--- a/src/components/Main/style.css
+++ b/src/components/Main/style.css
@@ -40,6 +40,10 @@ tbody{
 tr:nth-child(even) {
     background-color: rgb(216, 213, 213);
 } 
+ .fas{
+    cursor: pointer;
+    font-size: 21px;
+} 
 
 
 
